Fix for preventing author wrapping
A fix for preventing the author entry within the side by side variants of the Article components from wrapping onto multiple lines.

--- a/src/assets/scss/partial-styles/Article.scss
+++ b/src/assets/scss/partial-styles/Article.scss
@@ -58,6 +58,7 @@
   &__author--side-by-side {
     padding-left: 20px;
     padding-right: 30px;
+    display: block;
     margin-bottom: 0px !important;
     white-space: nowrap!important;
   }
